--- a/client/static/css/styles.css
+++ b/client/static/css/styles.css
@@ -116,16 +116,20 @@ nav {
   text-align: center;
   padding: 3em 0;
   position: relative; }
-  #search-box .about-app-heading {
-    margin: 0;
-    letter-spacing: 0.1em;
-    font-size: 2.2em; }
-  #search-box .about-the-app {
-    margin: 1em auto 0 auto;
-    text-align: justify;
-    width: 75%; }
   #search-box .search-form {
     margin-top: 4em; }
+
+.description {
+  width: 75%;
+  height: auto;
+  margin: 0 auto;
+  text-align: justify; }
+  .description .about-app-heading {
+    margin: 0;
+    letter-spacing: 0.13em;
+    font-size: 3.2em; }
+  .description .about-the-app {
+    margin: 1em auto 0 auto; }
 
 .form-control {
   width: 60%;
