--- a/client/static/css/styles.css
+++ b/client/static/css/styles.css
@@ -62,7 +62,8 @@ nav {
         min-width: 80px;
         text-align: center;
         text-decoration: none;
-        color: black; }
+        color: black;
+        cursor: pointer; }
 
 .big-header {
   width: 100%;
@@ -143,6 +144,62 @@ nav {
     margin: 0 auto;
     width: 80%;
     min-height: 100%; }
+
+#load-wrap {
+  height: 40em;
+  width: 80%;
+  padding: 1em 0;
+  position: relative;
+  background-color: #162525;
+  margin: 0 auto; }
+  #load-wrap #loading {
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%; }
+  #load-wrap #loading:before {
+    content: 'Loading';
+    position: absolute;
+    font-family: 'Montserrat', 'Open Sans', sans-serif;
+    font-size: 1.3em;
+    top: 30%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    color: #FFF; }
+  #load-wrap #loading:after {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    border: 2px solid #0EC198;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    top: 45%;
+    left: 50%;
+    -webkit-animation: ripple 1.5s ease-out infinite;
+    -moz-animation: ripple 1.5s ease-out infinite;
+    -ms-animation: ripple 1.5s ease-out infinite;
+    -o-animation: ripple 1.5s ease-out infinite;
+    animation: ripple 1.5s ease-out infinite; }
+
+@keyframes ripple {
+  0% {
+    width: 100px;
+    height: 100px;
+    opacity: 1; }
+  96% {
+    width: 400px;
+    height: 400px;
+    opacity: 0; }
+  100% {
+    width: 400px;
+    height: 400px;
+    opacity: 0; } }
 
 /* ---------------------- 
 
